--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="index.html">
             <h2>PH Shopee</h2>
         </a>
-        <a href="cart.html">
+        <a href="Cart.html">
             <div class="cart">
                 <i class="bi bi-cart-check-fill"></i>
                 <div id="cartamount" class="cartamount">0</div>
